force-app/main/default/objects/SPEN_ContactStaging__c/SPEN_ContactStaging__c.object-meta.xml
<CustomObject>
    <description>Contact Staging</description>
    <label>Contact Staging</label>
    <nameField>
        <displayFormat>CSG-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contacts Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>