force-app/main/default/objects/SPEN_ContactStaging__c/fields/SPEN_AdqmAction__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AdqmAction__c</fullName>
    <label>ADQM Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>