force-app/main/default/objects/SPEN_ContactStaging__c/fields/SPEN_AdqmLastModifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AdqmLastModifiedDateTime__c</fullName>
    <label>ADQM Last Modified Datetime</label>
    <type>DateTime</type>
</CustomField>