force-app/main/default/objects/SPEN_ContactStaging__c/fields/SPEN_AdqmSource__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AdqmSource__c</fullName>
    <label>ADQM Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Other Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>