force-app/main/default/objects/SPEN_ContactStaging__c/fields/SPEN_ContactType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ContactType__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>PSR Contact (Primary)</fullName>
            </value>
            <value>
                <fullName>Alternative Contact</fullName>
            </value>
            <value>
                <fullName>Site Contact</fullName>
            </value>
            <value>
                <fullName>Premise Owner</fullName>
            </value>
            <value>
                <fullName>PSR Contact (Alternative)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>