force-app/main/default/objects/SPEN_ContactStaging__c/fields/SPEN_DoorStepPassword__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DoorStepPassword__c</fullName>
    <label>Doorstep Password</label>
    <type>TextArea</type>
</CustomField>