force-app/main/default/objects/SPEN_ContactStaging__c/fields/SPEN_Email__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>