force-app/main/default/objects/SPEN_ContactStaging__c/fields/SPEN_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>ExternalId</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>