force-app/main/default/objects/SPEN_ContactStaging__c/fields/SPEN_FirstName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FirstName__c</fullName>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>