force-app/main/default/objects/SPEN_ContactStaging__c/fields/SPEN_Initials__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Initials__c</fullName>
    <label>Initials</label>
    <length>5</length>
    <type>Text</type>
</CustomField>