force-app/main/default/objects/SPEN_ContactStaging__c/fields/SPEN_LastName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LastName__c</fullName>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>