force-app/main/default/objects/SPEN_ContactStaging__c/fields/SPEN_Mobile__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Mobile__c</fullName>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>