force-app/main/default/objects/SPEN_ContactStaging__c/fields/SPEN_Other__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Other__c</fullName>
    <label>Other</label>
    <type>Phone</type>
</CustomField>