force-app/main/default/objects/SPEN_ContactStaging__c/fields/SPEN_OtherContactId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_OtherContactId__c</fullName>
    <label>Other Contact ID</label>
    <length>38</length>
    <type>Text</type>
</CustomField>