force-app/main/default/objects/SPEN_ContactStaging__c/fields/SPEN_PremiseId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PremiseId__c</fullName>
    <label>Premise ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>