force-app/main/default/objects/SPEN_ContactStaging__c/fields/SPEN_Salutation__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Salutation__c</fullName>
    <label>Salutation</label>
    <length>30</length>
    <type>Text</type>
</CustomField>