force-app/main/default/objects/SPEN_ContactStaging__c/fields/SPEN_Telephone__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Telephone__c</fullName>
    <label>Telephone</label>
    <type>Phone</type>
</CustomField>