force-app/main/default/objects/SPEN_ContactStaging__c/fields/SPEN_ValidateLetterSentDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ValidateLetterSentDate__c</fullName>
    <label>Validate Letter Sent Date</label>
    <type>Date</type>
</CustomField>