force-app/main/default/objects/SPEN_ContactStaging__c/fields/SPEN_WelcomeLetterSentDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WelcomeLetterSentDate__c</fullName>
    <label>Welcome Letter Sent Date</label>
    <type>Date</type>
</CustomField>