force-app/main/default/objects/SPEN_ContactStaging__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>SPEN_FirstName__c</columns>
    <columns>SPEN_LastName__c</columns>
    <columns>SPEN_SyncComment__c</columns>
    <columns>SPEN_ExternalId__c</columns>
    <columns>SPEN_AdqmAction__c</columns>
    <columns>SPEN_AdqmSource__c</columns>
    <columns>SPEN_SyncStatus__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>5/30/2023 12:00 AM</value>
    </filters>
    <label>Today</label>
</ListView>