force-app/main/default/objects/SPEN_ContactStaging__c/listViews/Yesterday.listView-meta.xml
<ListView>
    <fullName>Yesterday</fullName>
    <columns>NAME</columns>
    <columns>SPEN_FirstName__c</columns>
    <columns>SPEN_LastName__c</columns>
    <columns>SPEN_ExternalId__c</columns>
    <columns>SPEN_AdqmAction__c</columns>
    <columns>SPEN_AdqmSource__c</columns>
    <columns>SPEN_SyncStatus__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Yesterday</label>
</ListView>